--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,31 @@ python-dotenv
 ipykernel
 langchain-community
 pypdf
-bs4
-langchain-text-splitters
-lxml
-langchain-openai
-sentence-transformers
-langchain-huggingface
-faiss-cpu
-chromadb
-langchain-chroma
 streamlit
+bs4
+arxiv
+pymupdf
+wikipedia
+langchain-text-splitters
+langchain-openai
+chromadb
+sentence_transformers
+langchain_huggingface
+faiss-cpu
+langchain_chroma
+duckdb
+pandas
+openai
 langchain-groq
-fastapi
-uvicorn
-langserve
-sse_starlette
+duckduckgo-search
+pymupdf
+arxiv
+wikipedia
+mysql-connector-python
+SQLAlchemy
+validators==0.28.1
+youtube_transcript_api
+unstructured
+pytube
+numexpr
+huggingface_hub
